crates/cribo/tests/snapshots/bundled_code@metaclass_with_wildcard_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_with_wildcard_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('yaml_pkg', '_cribo_init___cribo_5b2acd_yaml_pkg', 'yaml_pkg', True)
_cribo_finder.register('yaml_pkg.loader', None, None, False, {'BaseLoader': 'BaseLoader', 'Loader': 'Loader', 'FullLoader': 'FullLoader'})
_cribo_finder.register('yaml_pkg.dumper', None, None, False, {'Dumper': 'Dumper'})
yaml_pkg_loader = _cribo.types.SimpleNamespace(__name__='yaml_pkg.loader')
yaml_pkg = _cribo.types.SimpleNamespace(__name__='yaml_pkg', __initializing__=False, __initialized__=False, __path__=[])
yaml_pkg.loader = yaml_pkg_loader
__all__ = ["BaseLoader", "Loader", "FullLoader"]
class BaseLoader:
    """Base loader class"""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.loader'), _cribo_f)[1])
    def __init__(self):
        self.name = "BaseLoader"

    @classmethod
    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.loader'), _cribo_f)[1])
    def add_constructor(cls, tag, constructor):
        print(f"{cls.__name__}: Adding constructor for {tag}")
BaseLoader.__module__ = 'yaml_pkg.loader'
class Loader(BaseLoader):
    """Standard loader class"""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.loader'), _cribo_f)[1])
    def __init__(self):
        super().__init__()
        self.name = "Loader"
Loader.__module__ = 'yaml_pkg.loader'
class FullLoader(BaseLoader):
    """Full loader with all features"""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.loader'), _cribo_f)[1])
    def __init__(self):
        super().__init__()
        self.name = "FullLoader"
FullLoader.__module__ = 'yaml_pkg.loader'
yaml_pkg_loader.BaseLoader = BaseLoader
yaml_pkg_loader.Loader = Loader
yaml_pkg_loader.FullLoader = FullLoader
yaml_pkg_dumper = _cribo.types.SimpleNamespace(__name__='yaml_pkg.dumper')
yaml_pkg.dumper = yaml_pkg_dumper
__all___yaml_pkg_dumper = ["Dumper"]
class Dumper:
    """Dumper class for YAML output"""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.dumper'), _cribo_f)[1])
    def __init__(self):
        self.name = "Dumper"

    @classmethod
    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg.dumper'), _cribo_f)[1])
    def add_representer(cls, data_type, representer):
        print(f"{cls.__name__}: Adding representer for {data_type}")
Dumper.__module__ = 'yaml_pkg.dumper'
yaml_pkg_dumper.Dumper = Dumper
def _cribo_init___cribo_5b2acd_yaml_pkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'yaml_pkg'
    _cribo_self.__doc__ = None
    _cribo_self.Dumper = yaml_pkg_dumper.Dumper
    _cribo_self.FullLoader = yaml_pkg_loader.FullLoader
    _cribo_self.Loader = yaml_pkg_loader.Loader
    BaseLoader = yaml_pkg_loader.BaseLoader
    Loader = yaml_pkg_loader.Loader
    FullLoader = yaml_pkg_loader.FullLoader
    Dumper = yaml_pkg_dumper.Dumper

    class YAMLObjectMetaclass(type):
        """\n    The metaclass for YAMLObject.\n    """

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg'), _cribo_f)[1])
        def __init__(cls, name, bases, kwds):
            super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds.get("yaml_tag") is not None:
                if isinstance(cls.yaml_loader, list):
                    for loader in cls.yaml_loader:
                        print(f"Registering {name} with {loader.__name__}")
                else:
                    print(f"Registering {name} with {cls.yaml_loader.__name__}")
    YAMLObjectMetaclass.__module__ = 'yaml_pkg'
    YAMLObjectMetaclass.__qualname__ = 'YAMLObjectMetaclass'
    _cribo_self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """\n    An object that uses a metaclass and references classes from wildcard imports.\n    This mimics PyYAML's structure.\n    """
        __slots__ = ()
        yaml_loader = [Loader, FullLoader]
        yaml_dumper = Dumper
        yaml_tag = None

        @classmethod
        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg'), _cribo_f)[1])
        def from_yaml(cls, loader, node):
            return f"Loading {cls.__name__} from YAML"

        @classmethod
        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'yaml_pkg'), _cribo_f)[1])
        def to_yaml(cls, dumper, data):
            return f"Dumping {cls.__name__} to YAML"
    YAMLObject.__module__ = 'yaml_pkg'
    YAMLObject.__qualname__ = 'YAMLObject'
    _cribo_self.YAMLObject = YAMLObject
    _cribo_self.dumper = yaml_pkg_dumper
    _cribo_self.loader = yaml_pkg_loader
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
yaml_pkg.__init__ = _cribo_init___cribo_5b2acd_yaml_pkg
_cribo_captured['BaseLoader'] = BaseLoader
_cribo_captured['Loader'] = Loader
_cribo_captured['FullLoader'] = FullLoader
_cribo_captured['Dumper'] = Dumper
"""\nTest case for metaclass forward reference issue with wildcard imports.\n\nThis reproduces the PyYAML bundling issue where:\n1. A class uses a metaclass that's defined later in the same module\n2. The class body references symbols imported via wildcard imports\n3. When bundled, the metaclass definition gets placed after its usage\n"""
__cribo_init_result = _cribo_init___cribo_5b2acd_yaml_pkg(yaml_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(yaml_pkg, attr, getattr(__cribo_init_result, attr))
print("Module loaded successfully")
print(f"YAMLObject name: {yaml_pkg.YAMLObject.__name__}")
print(f"YAMLObjectMetaclass name: {yaml_pkg.YAMLObjectMetaclass.__name__}")
print(f"Loader name: {yaml_pkg.Loader.__name__}")
print(f"FullLoader name: {yaml_pkg.FullLoader.__name__}")
print(f"Dumper name: {yaml_pkg.Dumper.__name__}")
class CustomYAMLObject(yaml_pkg.YAMLObject):
    yaml_tag = "!custom"

    def __init__(self, value):
        self.value = value
obj = CustomYAMLObject("test")
print(f"Created custom object with value: {obj.value}")
print(f"Custom object class name: {obj.__class__.__name__}")
print(f"yaml_loader types: {[type(loader).__name__ for loader in CustomYAMLObject.yaml_loader]}")
print(f"yaml_dumper type: {type(CustomYAMLObject.yaml_dumper).__name__}")
dumper = yaml_pkg.dumper
loader = yaml_pkg.loader
